@@ -1,0 +1,1 @@
+./rdup -c HERE . | ssh miekg@localhost ~/svn/rdup/trunk/mirror.sh -c -b /tmp/storage  
